# Red-DiscordBot

./: .codespell-ignore-lines  .codespell-ignore-words  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGES.rst  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  crowdin.yml  make.bat  make.ps1  mypy.ini  pyproject.toml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: lint_python.yaml  prepare_release.yml  publish_release.yml  run_pip_compile.yaml  run_precommit.yaml  tests.yml
.github/workflows/scripts/: bump_version.py  wait_for_rtd_build.js
docs/: autostart_systemd.rst  changelog_3_3_0.rst  changelog_3_4_0.rst  conf.py  framework_apikeys.rst  framework_commands.rst  framework_config.rst  framework_rpc.rst  getting_started.rst  guide_cog_creation.rst  host-list.rst  install_linux_mac.rst  install_windows.rst  update_red.rst  version_guarantees.rst
docs/cog_guides/: admin.rst  alias.rst  cleanup.rst  cog_manager_ui.rst  customcommands.rst  downloader.rst  economy.rst  filter.rst  general.rst  streams.rst  trivia.rst
docs/install_guides/: arch.rst  opensuse-leap-15.rst  windows.rst
docs/install_guides/_includes/: install-python-pyenv.rst
redbot/: __init__.py  __main__.py  launcher.py  logging.py  setup.py
redbot/cogs/admin/: admin.py  announcer.py  converters.py
redbot/cogs/alias/: __init__.py  alias.py  alias_entry.py
redbot/cogs/audio/: audio_dataclasses.py  converters.py  manager.py  utils.py
redbot/cogs/audio/apis/: global_db.py  interface.py  local_db.py  persist_queue_wrapper.py  playlist_interface.py  spotify.py  (+2 more)
redbot/cogs/bank/: __init__.py  bank.py
redbot/cogs/cleanup/: cleanup.py  converters.py
redbot/cogs/customcom/: customcom.py
redbot/cogs/downloader/: downloader.py  installable.py  repo_manager.py
redbot/cogs/economy/: economy.py
redbot/cogs/filter/: __init__.py  filter.py
redbot/cogs/general/: general.py
redbot/cogs/image/: image.py
redbot/cogs/mod/: __init__.py  converters.py  events.py  kickban.py  mod.py  names.py  settings.py  slowmode.py
redbot/cogs/modlog/: modlog.py
redbot/cogs/mutes/: __init__.py  converters.py  mutes.py  voicemutes.py
redbot/cogs/permissions/: converters.py  permissions.py
redbot/cogs/reports/: reports.py
redbot/cogs/streams/: streams.py  streamtypes.py
redbot/cogs/trivia/: __init__.py  session.py  trivia.py
redbot/cogs/warnings/: helpers.py  warnings.py
redbot/core/: bank.py  bot.py  cli.py  cog_manager.py  config.py  core_commands.py  data_manager.py  dev_commands.py  events.py  modlog.py  rpc.py  settings_caches.py
redbot/core/commands/: __init__.py  _dpy_reimplements.py  commands.py  context.py  converter.py  errors.py  help.py  requires.py
redbot/core/drivers/: _mongo.py  base.py
redbot/core/utils/: __init__.py  _internal_utils.py  antispam.py  menus.py  mod.py  tunnel.py
redbot/pytest/: downloader.py
requirements/: _constraint.in  base.in  base.txt  extra-docs.in  extra-docs.txt  extra-postgres.in  extra-postgres.txt  extra-style.txt  extra-test.in  extra-test.txt  requirements-dev.txt
tests/: conftest.py
tests/cogs/: test_alias.py  test_trivia.py
tests/cogs/downloader/: test_downloader.py  test_git.py  test_installable.py
tests/core/: test_config.py  test_utils.py  test_version.py
tools/: bumpdeps.py  dev-requirements.txt  primary_deps.ini  stylediff.py
(+27 files in other folders)
