[metadata]
name = Red-DiscordBot
description = A highly customisable Discord bot
license = GPL-3.0
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
author = Cog-Creators
author_email = cogcreators@gmail.com
url = https://github.com/Cog-Creators/Red-DiscordBot
project_urls =
    Discord Server = https://discord.gg/red
    Documentation = https://docs.discord.red
    Donate on Patreon = https://www.patreon.com/Red_Devs
    Issue Tracker = https://github.com/Cog-Creators/Red-DiscordBot/issues
    Source Code = https://github.com/Cog-Creators/Red-DiscordBot
classifiers =
    # List at https://pypi.org/pypi?%3Aaction=list_classifiers
    Development Status :: 5 - Production/Stable
    Framework :: AsyncIO
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Communications :: Chat
license_files =
    LICENSE
    redbot/**/*.LICENSE

[options]
packages = find_namespace:
python_requires = >=3.8.1,<3.11
include_package_data = True

[options.entry_points]
console_scripts =
    redbot=redbot.__main__:main
    redbot-setup=redbot.setup:run_cli
    redbot-launcher=redbot.launcher:main
pytest11 =
    red-discordbot=redbot.pytest

[options.packages.find]
include =
    redbot
    redbot.*
